# feedback-allocator

./: .gitignore  CMakeLists.txt  Makefile  README.md
public/: real_scenario.in  real_scenario.out  test_scenario.out  user_test.in  user_test.out
src/: main.cpp
